# gimp

./: acinclude.m4  configure.ac
app/: Makefile.am  app.c  gimp-features.cpp  gimp-features.h  sanity.c  signals.c
app/actions/: Makefile.am  actions.c  context-commands.c  dialogs-actions.c  layers-actions.c  layers-commands.c  layers-commands.h  mypaint-brush-editor-actions.c  mypaint-brush-editor-actions.h  mypaint-brushes-actions.c  mypaint-brushes-actions.h  view-commands.c
app/base/: Makefile.am  base-enums.c  base-enums.h  delegators.hpp  glib-cxx-bridge.hpp  glib-cxx-def-utils.hpp  glib-cxx-impl.hpp  glib-cxx-types.hpp  glib-cxx-utils.hpp  json-cxx-utils.hpp  pixel-processor.c  pixel-region.c  pixel-region.h  pixel.hpp  route.hpp  scopeguard.hpp  selectcase-utils.hpp  soup-cxx-utils.hpp  temp-buf.c  temp-buf.h  tile-cache.c  tile-manager.c  tile-manager.h  tile.c
app/composite/: gimp-composite-generic-installer.c  gimp-composite-generic.c  gimp-composite-generic.h  gimp-composite.c  gimp-composite.h
app/config/: gimpbaseconfig.h  gimpcoreconfig.c  gimpcoreconfig.h  gimpguiconfig.c  gimpguiconfig.h  gimprc-blurbs.h
app/core/: Makefile.am  core-enums.c  core-enums.h  core-types.h  gimp-user-install.c  gimp.c  gimp.h  gimpchannel.h  gimpclonelayer.cpp  gimpclonelayer.h  gimpclonelayerundo.cpp  gimpclonelayerundo.h  gimpcontainer.h  gimpcontext.c  gimpcontext.h  gimpcurve.c  gimpdata.h  gimpdatafactory.c  gimpdatafactory.h  gimpdrawable.c  gimpdrawable.h  gimpdrawablestack.c  gimpdrawablestack.h  gimpdrawableundo.c  gimpdynamics.c  gimpdynamics.h  gimpfilterlayer.cpp  gimpfilterlayer.h  gimpfilterlayerundo.cpp  gimpfilterlayerundo.h  gimpgrouplayer.c  gimpgrouplayer.h  gimpimage-crop.c  gimpimage-new.h  gimpimage-scale.c  gimpimage-undo.c  gimpimage.c  gimpimage.h  gimpitem.c  gimpitem.h  (+33 more)
app/dialogs/: dialogs-constructors.c  dialogs-constructors.h  dialogs.c  preferences-dialog.c
app/display/: Makefile.am  gimpcanvas.c  gimpcanvasarc.c  gimpcanvascorner.c  gimpcanvasgrid.c  gimpcanvasguide.c  gimpcanvashandle.c  gimpcanvaspath.c  gimpcanvasrectangle.c  gimpcanvasrectangleguides.c  gimpdisplay-foreach.h  gimpdisplay.c  gimpdisplayshell-appearance.c  gimpdisplayshell-callbacks.c  gimpdisplayshell-close.c  gimpdisplayshell-draw.c  gimpdisplayshell-expose.c  gimpdisplayshell-expose.h  gimpdisplayshell-render.c  gimpdisplayshell-rotate.c  gimpdisplayshell-rotate.h  gimpdisplayshell-scroll.c  gimpdisplayshell-scroll.h  gimpdisplayshell-selection.c  gimpdisplayshell-tool-events.c  gimpdisplayshell-transform.c  gimpdisplayshell-transform.h  gimpdisplayshell.c  gimpdisplayshell.h  gimpimagewindow-private.h  gimpimagewindow-webview.cpp  gimpimagewindow-webview.h  gimpimagewindow.c  gimpimagewindow.h  gimpmotionbuffer.c  gimpsinglewindowstrategy.c
app/file/: file-open.c
app/gui/: gimpuiconfigurer.c  gui-vtable.c  gui.c
app/httpd/: .gitignore  Makefile.am  httpd-enums.c  httpd-enums.h  httpd-features-gui.cpp  httpd-features-gui.h  httpd-features.cpp  httpd-features.h  httpd.cpp  httpd.h  navigation-guide.cpp  navigation-guide.h  rest-image-tree.cpp  rest-image-tree.h  rest-pdb.cpp  rest-pdb.h
app/menus/: menus.c
app/paint/: Makefile.am  gimpbrushcore.c  gimpbrushcore.h  gimpink.c  gimpink.h  gimpmypaintcore-brushfeature.hpp  gimpmypaintcore-drawablefeature.hpp  gimpmypaintcore-postprocess-filters.cpp  gimpmypaintcore-postprocess-filters.hpp  gimpmypaintcore-postprocess.cpp  gimpmypaintcore-postprocess.hpp  gimpmypaintcore-surface.cpp  gimpmypaintcore-surface.hpp  gimpmypaintcore.cpp  gimpmypaintcore.h.bak  gimpmypaintcore.hpp  gimpmypaintcoreundo.cpp  gimpmypaintcoreundo.h  gimpmypaintoptions-history.cpp  gimpmypaintoptions-history.hpp  gimpmypaintoptions.cpp  gimpmypaintoptions.h  gimppaintcore.c  gimppaintcore.h  gimppaintoptions.c  gimppaintoptions.h  gimpsmudge.c  gimpsmudge.h  gimpsmudgeoptions.c  gimpsmudgeoptions.h  mypaintbrush-brush.hpp  mypaintbrush-stroke.cpp  mypaintbrush-stroke.hpp  mypaintbrush-surface.hpp  paint-types.h
app/paint-funcs/: Makefile.am  mypaint-brushmodes.hpp  paint-funcs-generic.h  paint-funcs.c  paint-funcs.h
app/pdb/: Makefile.am  gimp-pdb-compat.c  gimp-pdb-compat.h  gimpprocedure.h  internal-procs.c  internal-procs.h  mypaint-brush-select-cmds.c  pdb-cxx-utils.cpp  pdb-cxx-utils.hpp  undo-cmds.c
app/plug-in/: gimpplugin-message.c  gimpplugin.c  gimppluginmanager-call.c  gimppluginmanager-call.h  gimppluginprocedure.c  gimppluginprocedure.h  gimppluginprocframe.c  gimppluginprocframe.h  plug-in-rc.c
app/presets/: .gitignore  Makefile.am  (+12 more)
data/: Makefile.am
data/layer-presets/: Makefile.am  crop-with-selection.json  duplicate-as-clone.json  duplicate-as-normal.json  new-anime-layer.json  test.json  test2.json  watercolor.json
data/mypaint-brushes/classic/: Makefile  Makefile.am  Makefile.in
data/mypaint-brushes/deevad/: Makefile  Makefile.am  Makefile.in  files
data/mypaint-brushes/experimental/: Makefile  Makefile.am  Makefile.in
data/mypaint-brushes/kaerhon/: Makefile.am  files
data/mypaint-brushes/ramon/: 100%_Opaque.myb  Makefile  Makefile.am  Makefile.in
data/mypaint-brushes/tanda/: Makefile  Makefile.am  Makefile.in
etc/: sessionrc
libgimp/: Makefile.am  gimp_pdb_headers.h  gimpenums.c.tail  gimpenums.h  gimpmypaintbrushselect_pdb.c  gimpmypaintbrushselect_pdb.h
libgimpbase/: Makefile.am  gimpbaseenums.c  gimpbaseenums.h
libgimpcolor/: gimpcairocolor.h
libgimpconfig/: gimpconfig-params.h
libgimpwidgets/: Makefile.am  gimpbrowser.c  gimpcolordisplay.c  gimpcolordisplay.h  gimpenumwidgets.c  gimpenumwidgets.h  gimpframe.h  gimpintcombobox.h  gimpmemsizeentry.c  gimppageselector.c  gimppickbutton.c  gimppropwidgets.c  gimppropwidgets.h  gimpquerybox.c  gimpsizeentry.c  gimpstock.c  gimpstock.h  gimpwidgets.c  gimpwidgets.h
menus/: Makefile.am  dialogs-menuitems.xml  image-menu.xml.in  mypaint-brush-editor-menu.xml  mypaint-brushes-menu.xml
modules/: color-selector-cmyk.c  color-selector-water.c  gimpcolorwheel.c
plug-ins/: Makefile.am
po/: POTFILES.in  ja.po
po-libgimp/: POTFILES.in
(+249 files in other folders)
