## Makefile.am for gimp/data/layer-presets/

layerpresetsdatadir = $(gimpdatadir)/layer-presets/

layerpresetsdata_DATA = \
	crop-with-selection.json	\
	duplicate-as-clone.json		\
      	duplicate-as-normal.json  	\
	new-anime-layer.json		\
      	test.json			\
      	test2.json			\
	watercolor.json

EXTRA_DIST = $(layerpresetsdata_DATA)
