## Makefile.am for gimp/data/mypaint-brushes/classic

mypaintbrushesclassicdatadir = $(gimpdatadir)/mypaint-brushes/classic

mypaintbrushesclassicdata_DATA = 	\
    blend+paint.myb	\
    blend+paint_prev.png	\
    blending_knife.myb	\
    blending_knife_prev.png	\
    blur.myb	\
    blur_prev.png	\
    brush.myb	\
    brush_prev.png	\
    bulk.myb	\
    bulk_prev.png	\
    calligraphy.myb	\
    calligraphy_prev.png	\
    charcoal.myb	\
    charcoal_prev.png	\
    coarse_bulk_1.myb	\
    coarse_bulk_1_prev.png	\
    coarse_bulk_2.myb	\
    coarse_bulk_2_prev.png	\
    coarse_bulk_3.myb	\
    coarse_bulk_3_prev.png	\
    dry_brush.myb	\
    dry_brush_prev.png	\
    imp_blending.myb	\
    imp_blending_prev.png	\
    imp_details.myb	\
    imp_details_prev.png	\
    impressionism.myb	\
    impressionism_prev.png	\
    ink_blot.myb	\
    ink_blot_prev.png	\
    ink_eraser.myb	\
    ink_eraser_prev.png	\
    kabura.myb	\
    kabura_prev.png	\
    knife.myb	\
    knife_prev.png	\
    long_grass.myb	\
    long_grass_prev.png	\
    marker_fat.myb	\
    marker_fat_prev.png	\
    marker_small.myb	\
    marker_small_prev.png	\
    modelling.myb	\
    modelling2.myb	\
    modelling2_prev.png	\
    modelling_prev.png	\
    pen.myb	\
    pen_prev.png	\
    pencil.myb	\
    pencil_prev.png	\
    pointy_ink.myb	\
    pointy_ink_prev.png	\
    puantilism.myb	\
    puantilism2.myb	\
    puantilism2_prev.png	\
    puantilism_prev.png	\
    rounded.myb	\
    rounded_prev.png	\
    short_grass.myb	\
    short_grass_prev.png	\
    slow_ink.myb	\
    slow_ink_prev.png	\
    smudge+paint.myb	\
    smudge+paint_prev.png	\
    smudge.myb	\
    smudge_prev.png	\
    textured_ink.myb	\
    textured_ink_prev.png	\
    wet_knife.myb	\
    wet_knife_prev.png

EXTRA_DIST = $(mypaintbrushesclassicdata_DATA)
