## Makefile.am for gimp/data/mypaint-brushes/deevad

mypaintbrushesdeevaddatadir = $(gimpdatadir)/mypaint-brushes/deevad

mypaintbrushesdeevaddata_DATA = 	\
    2B.myb	\
    2B_prev.png	\
    4H.myb	\
    4H_prev.png	\
    airbrush.myb	\
    airbrush_prev.png	\
    artpen.myb	\
    artpen_prev.png	\
    ballpen.myb	\
    ballpen_prev.png	\
    blending.myb	\
    blending2.myb	\
    blending2_prev.png	\
    blending_prev.png	\
    brush.myb	\
    brush_prev.png	\
    chalk.myb	\
    chalk_prev.png	\
    charcoal.myb	\
    charcoal_prev.png	\
    detail1.myb	\
    detail1_prev.png	\
    detail2.myb	\
    detail2_prev.png	\
    detail3.myb	\
    detail3_prev.png	\
    detail4.myb	\
    detail4_prev.png	\
    digital.myb	\
    digital_prev.png	\
    fill.myb	\
    fill_prev.png	\
    gpen.myb	\
    gpen_prev.png	\
    hard.myb	\
    hard_prev.png	\
    kneaded.myb	\
    kneaded2.myb	\
    kneaded2_prev.png	\
    kneaded_prev.png	\
    knife.myb	\
    knife_prev.png	\
    marker.myb	\
    marker_prev.png	\
    mixbrush.myb	\
    mixbrush_prev.png	\
    mixknife.myb	\
    mixknife_prev.png	\
    mop.myb	\
    mop_prev.png	\
    pen.myb	\
    pen_prev.png	\
    rigger.myb	\
    rigger2.myb	\
    rigger2_prev.png	\
    rigger_prev.png	\
    sketch.myb	\
    sketch_prev.png	\
    sponge.myb	\
    sponge_prev.png	\
    spray.myb	\
    spray2.myb	\
    spray2_prev.png	\
    spray_prev.png	\
    stick.myb	\
    stick_prev.png	\
    water1.myb	\
    water1_prev.png	\
    water2.myb	\
    water2_prev.png	\
    water3.myb	\
    water3_prev.png

EXTRA_DIST = $(mypaintbrushesdeevaddata_DATA)
