## Makefile.am for gimp/data/mypaint-brushes/deevad

mypaintbrushesdeevaddatadir = $(gimpdatadir)/mypaint-brushes/deevad

mypaintbrushesdeevaddata_DATA = 	\
2B_pencil.myb	\
2B_pencil_prev.png	\
4H_pencil.myb	\
4H_pencil_prev.png	\
airbrush.myb	\
airbrush_prev.png	\
ballpen.myb	\
ballpen_prev.png	\
basic_digital_brush.myb	\
basic_digital_brush_prev.png	\
basic_digital_brush_smudging.myb	\
basic_digital_brush_smudging_prev.png	\
basic_digital_knife.myb	\
basic_digital_knife_prev.png	\
basic_digital_knife_smudging.myb	\
basic_digital_knife_smudging_prev.png	\
blending.myb	\
blending_prev.png	\
brush.myb	\
brush_prev.png	\
chalk.myb	\
chalk_prev.png	\
detail_brush_large.myb	\
detail_brush_large_glazing.myb	\
detail_brush_large_glazing_prev.png	\
detail_brush_large_prev.png	\
detail_brush_thin.myb	\
detail_brush_thin_glazing.myb	\
detail_brush_thin_glazing_prev.png	\
detail_brush_thin_prev.png	\
fill.myb	\
fill_prev.png	\
grainy_blending.myb	\
grainy_blending_prev.png	\
kneaded_eraser.myb	\
kneaded_eraser_large.myb	\
kneaded_eraser_large_prev.png	\
kneaded_eraser_prev.png	\
large_hard_eraser.myb	\
large_hard_eraser_prev.png	\
large_watercolor_fringe.myb	\
large_watercolor_fringe_prev.png	\
liner.myb	\
liner_prev.png	\
only_water_fringe.myb	\
only_water_fringe_prev.png	\
pen-note.myb	\
pen-note_prev.png	\
pen.myb	\
pen_prev.png	\
rigger_brush.myb	\
rigger_brush_prev.png	\
rigger_brush_thin.myb	\
rigger_brush_thin_prev.png	\
rough.myb	\
rough_prev.png	\
soft-dip-pen.myb	\
soft-dip-pen_prev.png	\
sponge_smudging.myb	\
sponge_smudging_prev.png	\
spray.myb	\
spray2.myb	\
spray2_prev.png	\
spray_prev.png	\
thin_hard_eraser.myb	\
thin_hard_eraser_prev.png	\
thin_watercolor.myb	\
thin_watercolor_prev.png	\
watercolor_expressive.myb	\
watercolor_expressive_prev.png	\
watercolor_glazing.myb	\
watercolor_glazing_prev.png

EXTRA_DIST = $(mypaintbrushesdeevaddata_DATA)
