## Makefile.am for gimp/data/mypaint-brushes/experimental

mypaintbrushesexperimentaldatadir = $(gimpdatadir)/mypaint-brushes/experimental

mypaintbrushesexperimentaldata_DATA = 	\
    1pixel.myb	\
    1pixel_prev.png	\
    DNA_brush.myb	\
    DNA_brush_prev.png	\
    basic.myb	\
    basic_prev.png	\
    bubble.myb	\
    bubble_prev.png	\
    fur.myb	\
    fur_prev.png	\
    glow.myb	\
    glow_prev.png	\
    hard_blot.myb	\
    hard_blot_prev.png	\
    hard_sting.myb	\
    hard_sting_prev.png	\
    irregular_ink.myb	\
    irregular_ink_prev.png	\
    leaves.myb	\
    leaves_prev.png	\
    particules_3.myb	\
    particules_3_prev.png	\
    particules_eraser.myb	\
    particules_eraser_prev.png	\
    pick_and_drag.myb	\
    pick_and_drag_prev.png	\
    pixel_hardink.myb	\
    pixel_hardink_prev.png	\
    pixelblocking.myb	\
    pixelblocking_prev.png	\
    sewing.myb	\
    sewing_prev.png	\
    small_blot.myb	\
    small_blot_prev.png	\
    soft.myb	\
    soft_irregular.myb	\
    soft_irregular_prev.png	\
    soft_prev.png	\
    spaced-blot.myb	\
    spaced-blot_prev.png	\
    speed_blot.myb	\
    speed_blot_prev.png	\
    subtle_pencil.myb	\
    subtle_pencil_prev.png	\
    track.myb	\
    track_prev.png

EXTRA_DIST = $(mypaintbrushesexperimentaldata_DATA)
