## Makefile.am for gimp/data/mypaint-brushes/kaerhon

mypaintbrusheskaerhondatadir = $(gimpdatadir)/mypaint-brushes/kaerhon

mypaintbrusheskaerhondata_DATA = 	\
Airbrush_a.myb	\
Airbrush_a_prev.png	\
Dirty_Transparent_sk.myb	\
Dirty_Transparent_sk_prev.png	\
Sketcher2_sk.myb	\
Sketcher2_sk_prev.png	\
Smear_sm.myb	\
Smear_sm_prev.png	\
airbruch_press_a.myb	\
airbruch_press_a_prev.png	\
airsmudge_a.myb	\
airsmudge_a_prev.png	\
airsmudgeultimate_sk.myb	\
airsmudgeultimate_sk_prev.png	\
classic_sk.myb	\
classic_sk_prev.png	\
classicroundblock_static_c.myb	\
classicroundblock_static_c_prev.png	\
extreme_round_l.myb	\
extreme_round_l_prev.png	\
fill_c.myb	\
fill_c_prev.png	\
flat_bar_l.myb	\
flat_bar_l_prev.png	\
ink-slowline_s.myb	\
ink-slowline_s_prev.png	\
ink_slow_s.myb	\
ink_slow_s_prev.png	\
inkster_l.myb	\
inkster_l_prev.png	\
paint_barrr_sm.myb	\
paint_barrr_sm_prev.png	\
paint_radius_2_sm.myb	\
paint_radius_2_sm_prev.png	\
paint_sm.myb	\
paint_sm_prev.png	\
smudge_ink(0.7)_sm.myb	\
smudge_ink(0.7)_sm_prev.png	\
wet_paint_sm.myb	\
wet_paint_sm_prev.png

EXTRA_DIST = $(mypaintbrusheskaerhondata_DATA)
