## Makefile.am for gimp/data/mypaint-brushes/ramon

mypaintbrushesramondatadir = $(gimpdatadir)/mypaint-brushes/ramon

mypaintbrushesramondata_DATA = 	\
    100%_Opaque.myb	\
    100%_Opaque_prev.png	\
    2B_pencil.myb	\
    2B_pencil_prev.png	\
    B-pencil.myb	\
    B-pencil_prev.png	\
    Beamlight.myb	\
    Beamlight_prev.png	\
    BigAirbrush.myb	\
    BigAirbrush_prev.png	\
    Blur_Fast.myb	\
    Blur_Fast_prev.png	\
    Classic_Paint.myb	\
    Classic_Paint_prev.png	\
    Clouds.myb	\
    Clouds_prev.png	\
    Delayed_.myb	\
    Delayed__prev.png	\
    Dirty_Noise.myb	\
    Dirty_Noise_prev.png	\
    Glow_Airbrush.myb	\
    Glow_Airbrush_prev.png	\
    Grain.myb	\
    Grain_prev.png	\
    Hard_Eraser.myb	\
    Hard_Eraser_prev.png	\
    Knife.myb	\
    Knife_prev.png	\
    Marker.myb	\
    Marker_prev.png	\
    P._Shade.myb	\
    P._Shade_prev.png	\
    Pastel_1.myb	\
    Pastel_1_prev.png	\
    Pen.myb	\
    PenBrush.myb	\
    PenBrush_prev.png	\
    Pen_prev.png	\
    RS_blendOP.myb	\
    RS_blendOP_prev.png	\
    Round.myb	\
    Round_Bl.myb	\
    Round_Bl_prev.png	\
    Round_prev.png	\
    Sketch_1.myb	\
    Sketch_1_prev.png	\
    Smear.myb	\
    Smear_prev.png	\
    Soft_Eraser.myb	\
    Soft_Eraser_prev.png	\
    Thin_Pen.myb	\
    Thin_Pen_prev.png	\
    Wet_Direction.myb	\
    Wet_Direction_prev.png	\
    wet_round.myb	\
    wet_round_prev.png

EXTRA_DIST = $(mypaintbrushesramondata_DATA)
