## Makefile.am for gimp/data/mypaint-brushes/tanda

mypaintbrushestandadatadir = $(gimpdatadir)/mypaint-brushes/tanda

mypaintbrushestandadata_DATA = 	\
    acrylic-03-only-water.myb	\
    acrylic-03-only-water_prev.png	\
    acrylic-03-paint.myb	\
    acrylic-03-paint_prev.png	\
    acrylic-03-with-water.myb	\
    acrylic-03-with-water_prev.png	\
    acrylic-04-only-water.myb	\
    acrylic-04-only-water_prev.png	\
    acrylic-04-paint.myb	\
    acrylic-04-paint_prev.png	\
    acrylic-04-with-water.myb	\
    acrylic-04-with-water_prev.png	\
    acrylic-05-only-water.myb	\
    acrylic-05-only-water_prev.png	\
    acrylic-05-paint.myb	\
    acrylic-05-paint_prev.png	\
    acrylic-05-with-water.myb	\
    acrylic-05-with-water_prev.png	\
    charcoal-01.myb	\
    charcoal-01_prev.png	\
    charcoal-03.myb	\
    charcoal-03_prev.png	\
    charcoal-04.myb	\
    charcoal-04_prev.png	\
    charcoal-blur1.myb	\
    charcoal-blur1_prev.png	\
    marker-01.myb	\
    marker-01_prev.png	\
    marker-05.myb	\
    marker-05_prev.png	\
    oil-01-clean.myb	\
    oil-01-clean_prev.png	\
    oil-01-paint.myb	\
    oil-01-paint_prev.png	\
    oil-03-clean.myb	\
    oil-03-clean_prev.png	\
    oil-03-paint.myb	\
    oil-03-paint_prev.png	\
    oil-06-clean.myb	\
    oil-06-clean_prev.png	\
    oil-06-paint.myb	\
    oil-06-paint_prev.png	\
    oil-mop.myb	\
    oil-mop_prev.png	\
    pencil-2b.myb	\
    pencil-2b_prev.png	\
    pencil-8b.myb	\
    pencil-8b_prev.png	\
    splatter-02.myb	\
    splatter-02_prev.png	\
    splatter-04.myb	\
    splatter-04_prev.png	\
    texture-03.myb	\
    texture-03_prev.png	\
    texture-06.myb	\
    texture-06_prev.png	\
    texture-12.myb	\
    texture-12_prev.png	\
    water-01.myb	\
    water-01_prev.png	\
    water-02.myb	\
    water-02_prev.png	\
    water-05.myb	\
    water-05_prev.png	\
    water-06.myb	\
    water-06_prev.png	\
    watercolor-02-paint.myb	\
    watercolor-02-paint_prev.png	\
    watercolor-02-water.myb	\
    watercolor-02-water_prev.png

EXTRA_DIST = $(mypaintbrushestandadata_DATA)
